add personal page

--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,46 @@
 ---
-title: "LiyinHe.github.io"
+title: "Liyin He"
+about:
+  template: trestles
+  image: pics/liyin.png
+  links:
+    - icon: twitter
+      text: twitter
+      href: https://twitter.com/he_liyin 
+    - icon: linkedin
+      text: linkedin
+      href: https://www.linkedin.com/in/liyin-he-272214a5/ 
+    - icon: google
+      text: google scholar      
+      href: https://scholar.google.com/citations?user=ITMmmQIAAAAJ&hl=en
 ---
 
-This is a Quarto website.
+:::{#hero-heading}
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+**I will join Nicholas School of the Environment (NSOE) at Duke University as an assistant professor in Jan 2025!** I am currently looking for highly motivated PhD students, Postdocs and visiting scholars. Please contact me (he.liyin@duke.edu) by including your CV and research interests.
 
-```{r}
-1 + 1
-```
+My research focuses on understanding the interrelationship between air, water, and ecosystem in the face of climate change, elevated CO~2~, air pollution, and different management practices. I use three main approaches: 1) *spatiotemporal data analysis* to interpret field and satellite observations; 2) *machine learning approaches* to generate novel datasets; and 3) *process-based terrestrial biosphere models* to understand the underlying mechanism. My work encompasses a wide range of scales—from the micro-level interactions within individual plants to macro-level regional and global patterns.
+
+
+## **Appointment**
+
+**Carnegie Institution for Science (at Stanford University)** | Aug 2022 - now\
+
+- **Postdoctoral Research Associate** at Department of Global Ecology
+- **Supervisor**: Dr. Lorenzo Rosa
+
+## **Education**
+
+**California Institute of Technology** | Ph.D | Sep 2016 - Jul 2022
+
+- **Major**: Environmental Science & Engineering
+- **Minor**: Applied and Computational Mathematics
+- **Thesis Advisory Committee**: Dr. Christian Frankenberg (advisor), Dr. Paul Wennberg (chair), Dr. Yuk Yung and Dr. David Schimel
+- **Thesis**: Agriculture and Its Role in the Global Carbon Cycle
+
+**Nanjing University** | B.S |Sep 2012 - Jun 2016
+
+- **Major**: Geographic Information Science (with honor)\
+- **Minor**: Financial Engineering 
+
+:::
