--- a/Opportunities.qmd
+++ b/Opportunities.qmd
@@ -2,3 +2,5 @@
 title: "Opportunities"
 editor: visual
 ---
+
+I am currently looking for highly motivated PhD students, Postdocs and visiting scholars. Please contact me (he.liyin@duke.edu) by including your CV and research interests.
