--- a/Opportunities.qmd
+++ b/Opportunities.qmd
@@ -3,4 +3,12 @@ title: "Opportunities"
 editor: visual
 ---
 
-I am currently looking for highly motivated PhD students, Postdocs and visiting scholars. Please contact me (he.liyin@duke.edu) by including your CV and research interests.
+I am actively looking for dedicated and enthusiastic PhD students, Postdoctoral researchers, and visiting scholars to join our team. There will be flexibility regarding scientific questions to be studied, but potential areas of focus include: 
+
+- Advance understanding of the terrestrial carbon cycle by employing eddy covariance measurements, airborne/satellite remote sensing, atmospheric inversions, and Earth system modeling.
+
+- Investigate how various ecosystems, including agroecosystems, forests, urban ecosystems, drylands, and permafrost, respond to extreme events such as droughts, heatwaves, floods, wildfires, and hurricanes.
+
+- Evaluate the potential impact of nature-based solutions on carbon sequestration and agricultural sustainability. 
+
+Please contact me <he.liyin@duke.edu> by including your CV, anticipated start date and research interests. 
