--- a/Opportunities.qmd
+++ b/Opportunities.qmd
@@ -1,7 +1,6 @@
----
-title: "Opportunities"
-editor: visual
----
+
+
+# Interested in joining the group?
 
 I am actively looking for dedicated and enthusiastic PhD students, Postdoctoral researchers, and visiting scholars to join our team. There will be flexibility regarding scientific questions to be studied, but potential areas of focus include: 
 
