--- a/index.qmd
+++ b/index.qmd
@@ -43,7 +43,7 @@ My research focuses on understanding the interrelationship between air, water, a
 - **Major**: Environmental Science & Engineering
 - **Minor**: Applied and Computational Mathematics
 - **Thesis Advisory Committee**: Dr. Christian Frankenberg (advisor), Dr. Paul Wennberg (chair), Dr. Yuk Yung and Dr. David Schimel
-- **Thesis**: Agriculture and Its Role in the Global Carbon Cycle
+- **Thesis**: [Agriculture and Its Role in the Global Carbon Cycle](https://thesis.library.caltech.edu/15140/)
 
 **Nanjing University** | B.S |Sep 2012 - Jun 2016
 
