--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,7 @@ title: "Liyin He"
 resources: people/resume/Liyin He_CV_v3.pdf
 about:
   template: trestles
-  image: pics/liyin.png
+  image: pics/grad_photo.jpg
   links:
     - icon: twitter
       text: twitter
