--- a/Research.qmd
+++ b/Research.qmd
@@ -10,7 +10,7 @@ fig-align: center
 ::: {#first-column}
 \
 \
-My research explores the complex relationships among ***Carbon-Air-Water*** in the face of climate change, elevated atmospheric CO~2~, air pollution, and different management practices. I use an integrated earth-system framework to study terrestrial ecology that connects:
+My research explores the complex relationships among **Carbon-Air-Water** in the face of climate change, elevated atmospheric CO~2~, air pollution, and different management practices. I use an integrated earth-system framework to study terrestrial ecology that connects:
 
 - Plant Ecology (Terrestrial Carbon Cycle)
 - Climatology (Air Quality and Climate) 
@@ -18,7 +18,7 @@ My research explores the complex relationships among ***Carbon-Air-Water*** in t
 :::
 
 ::: {#second-column}
-![***Carbon-Air-Water Nexus***](pics/carbon-air-water.png){width=300}
+![**Carbon-Air-Water Nexus**](pics/carbon-air-water.png){width=300}
 
 :::
 
@@ -27,7 +27,7 @@ My research explores the complex relationships among ***Carbon-Air-Water*** in t
 
 My work encompasses a wide range of scales—from the micro-level interactions within individual plants to macro-level regional and global patterns. Across different scales, I use different sensing technologies, including leaf gas-exchange system, eddy covariance measurements, and ground/airborne/satellite remote sensing. The knowledge gained from these data-driven approaches are crucial for improving ecosystem models and calibrating parameters, enabling more accurate predictions of ecosystem trajectories under climate change. These scientific insights will be leveraged to empower policymakers and stakeholders to develop more effective and targeted strategies for climate adaptation and mitigation.
 
-![***Cross-scale sensing and modeling of ecosystem processes***](pics/cross_scale.png)
+![**Cross-scale sensing and modeling of ecosystem processes**](pics/cross_scale.png)
 
 
 ### **Topic 1: Cross-Scale Sensing of Photosynthesis and Crop Yields**
