add research link

--- a/Research.qmd
+++ b/Research.qmd
@@ -33,14 +33,22 @@ My work encompasses a wide range of scales—from the micro-level interactions w
 ### **Topic 1: Cross-Scale Sensing of Photosynthesis and Crop Yields**
 I developed a novel framework [using satellite-derived solar-induced chlorophyll fluorescence (SIF) to estimate crop yield](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020GL087474). While traditional vegetation indices like the Normalized Difference Vegetation Index (NDVI) can track plant growth, they often saturate in cropland and are not sensitive to short-term environmental stressors like flash droughts. In contrast, SIF—emitted near-infrared light from chlorophyll a molecules—serves as a more direct physiological indicator of photosynthesis. My research has demonstrated a robust correlation between satellite SIF and USDA-reported county-level crop yield. **This work underscores the promise of SIF as a robust and cost-effective tool for real-time crop yield monitoring at regional to global scales.** 
 
+Related work: [He et al. (2020) *GRL*](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020GL087474), [He et al. (2020) *JGR-Biogeoscience*](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2018JG005002)
+
 ### **Topic 2: Climate–Vegetation–Carbon Cycle Feedbacks**
 An increase in the seasonal cycle amplitude (SCA) of CO~2~ since the 1960s has been observed in the Northern Hemisphere (NH). However, dominant drivers of the amplified CO~2~ seasonality are still debated. I employed satellite-based remote sensing observations to track spatial and temporal changes in global photosynthesis of different vegetation types. Then, [a state-of-art atmospheric transport model is used to examine whether our bottom-up estimates of ecosystem fluxes can capture the observed CO~2~ SCA trends](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021GB007220) at multiple surface sites. Further, we explore dominant drivers of the observed CO~2~ SCA trends across different locations of sites. **This work links long-term satellite remote sensing observations with ground atmospheric CO~2~ measurements across the NH to explore how terrestrial carbon fluxes shape and change spatiotemporal pattern of atmospheric CO~2~.**
+
+Related work: [He et al.(2020) *Global Biogeochemical Cycles*](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021GB007220)
 
 ### **Topic 3: Impact of Air Quality on Terrestrial Carbon Uptake and Crop Yields**
 I investigated the [influence of anthropogenic aerosols on plant photosynthesis and crop yields](https://www.pnas.org/doi/abs/10.1073/pnas.2306507120). While aerosols are known to affect photosynthesis through scattering and absorbing solar radiation, the exact effects at continental scales remain highly uncertain. I leveraged daily satellite SIF observations, which is mechanistically linked to plant photosynthesis, to explore the effects of aerosols on photosynthesis. My results revealed that 64% of regions in Europe show increased SIF on weekends compared to weekdays, when there is more plant-available sunlight due to reduced particulate pollution sourced from human and industrial activities. This suggests mitigating particulate pollution could enhance photosynthesis and ecosystem productivity in light-limited ecosystems. **This work, for the first time, assesses human impacts on photosynthesis via aerosol pollution using satellite observations.**
 
+Related work: [He el al. (2023) *Proceedings of the National Academy of Sciences*](https://www.pnas.org/doi/10.1073/pnas.2306507120), [He et al. (2022) *Earth's Future*](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2022EF002936) 
+
 ### **Topic 4: Food Security and Adaptation to Climate Change**
 I studied the role of irrigation in enhancing agricultural resilience and mitigating crop yield losses under future warming. [Significant reductions in crop yields have been observed and will intensify](https://academic.oup.com/pnasnexus/article/2/4/pgad117/7101082) due to the increased frequency and intensity of droughts and heatwaves under warming. Irrigation improves crop yield stability through providing water supply and evapotranspiration cooling. Using global historical crop and climate observations, climate models and agro-hydrological simulations, **I estimated the crop yield losses under future warming and assessed how much irrigation expansion we need to mitigate yield losses under future warming.**
+
+Related work: [He et al. (2023) *PNAS Nexus*](https://academic.oup.com/pnasnexus/article/2/4/pgad117/7101082)
 
 Looking forward, I am interested in integrating process-based models, satellite remote sensing, and machine learning approaches to examine the **interconnected factors that influence the spatio-temporal variations in crop yields**, and evaluate **how different agricultural management practices will affect crop yields, greenhouse gas emissions and soil carbon stocks**. These findings will then be used to inform tailored strategies which aims not only to optimize crop yields but also to reduce agriculture’s carbon footprint.
 
