--- a/Opportunities.qmd
+++ b/Opportunities.qmd
@@ -13,4 +13,4 @@ I am actively looking for dedicated and enthusiastic PhD students, Postdoctoral 
 
 - Evaluate the potential impact of nature-based solutions on carbon sequestration and agricultural sustainability. 
 
-Please contact me <he.liyin@duke.edu> by including your CV, anticipated start date and research interests. 
+Please contact me <liyin.he@duke.edu> by including your CV, anticipated start date and research interests. 
