--- a/index.qmd
+++ b/index.qmd
@@ -1,53 +1,204 @@
 ---
-title: "Liyin He"
-resources: people/resume/Liyin He_CV_v3.pdf
-about:
-  template: trestles
-  image: pics/liyin_PKU.jpg
-  links:
-    - icon: twitter
-      text: twitter
-      href: https://twitter.com/he_liyin 
-    - icon: linkedin
-      text: linkedin
-      href: https://www.linkedin.com/in/liyin-he-272214a5/ 
-    - icon: google
-      text: google scholar      
-      href: https://scholar.google.com/citations?user=ITMmmQIAAAAJ&hl=en 
-    - icon: envelope
-      text: email   
-      href: "mailto:liyin.he@duke.edu"
-    - icon: file-text
-      text: resume   
-      href: people/resume/Liyin He_CV_v3.pdf
+title: "Welcome to EcoSense Lab"
+format:
+  html:
+    toc: false
+    css: styles.css # You can link to a custom CSS file for more styling
 ---
 
-:::{#hero-heading}
-
-**I will join [Nicholas School of the Environment (NSOE)](https://nicholas.duke.edu/) at [Duke University](https://duke.edu/) as an assistant professor in Jan 2025!** I am actively looking for dedicated and enthusiastic PhD students, Postdoctoral researchers, and visiting students/scholars to join our team. Please contact me <liyin.he@duke.edu> by including your CV, anticipated start date and research interests.
-
-My research focuses on understanding the **interrelationship between air, water, and ecosystem** in the face of climate change, elevated CO~2~, air pollution, and different management practices. I use three main approaches: 1) **spatiotemporal data analysis** to interpret field and satellite observations; 2) **machine learning approaches** to generate novel datasets; and 3) **process-based terrestrial biosphere models** to understand the underlying mechanism. My work encompasses a wide range of scales—from the **micro-level interactions within individual plants** to **macro-level regional and global patterns**.
-
-
-## **Appointment**
-
-**Carnegie Institution for Science (at Stanford University)** | Aug 2022 - now\
-
-- **Postdoctoral Research Associate** at Department of Global Ecology
-- **Supervisor**: Dr. Lorenzo Rosa
-
-## **Education**
-
-**California Institute of Technology** | Ph.D | Sep 2016 - Jul 2022
-
-- **Major**: Environmental Science & Engineering
-- **Minor**: Applied and Computational Mathematics
-- **Thesis Advisory Committee**: Dr. Christian Frankenberg (advisor), Dr. Paul Wennberg (chair), Dr. Yuk Yung and Dr. David Schimel
-- **Thesis**: [Agriculture and Its Role in the Global Carbon Cycle](https://thesis.library.caltech.edu/15140/)
-
-**Nanjing University** | B.S |Sep 2012 - Jun 2016
-
-- **Major**: Geographic Information Science (with honor)\
-- **Minor**: Financial Engineering 
-
+::: {#group-section}
+<!-- Group Logo and Description Section -->
+<div class="group-header">
+  <div class="logo-and-tagline">
+  <img src="pics/logo_bright.png" alt="EcoSense Group Logo" class="group-logo">
+  <p class="tagline"><b>Eco</b> — Ecology / Ecosystems<br><b>Sense</b> — Sensing (remote sensing, monitoring) <br> + Intelligent understanding</p>
+  </div>
+  <div class="group-description-box">
+  <p>
+      <b>We are ecologists dedicated to advancing the understanding of how terrestrial ecosystems interact with climate using a variety of tools:</b>
+      <ul>
+        <li>Satellite remote sensing (Solar-induced chlorophyll fluorescence, Optical remote sensing, Thermal remote sensing)</li>
+        <li>Artificial intelligence (Interoperable AI, Process-informed machine learning)</li>
+        <li>Land surface modeling to better represent carbon and water fluxes</li>
+      </ul>
+  </p>
+  <p>
+      <b>Our research aims to bridge fundamental ecological science with real-world applications that deliver socioeconomic benefits, including but not limited to:</b>
+      <ul>
+        <li>Enhancing forest management to increase carbon sequestration</li>
+        <li>Improving crop yields to support food security</li>
+        <li>Mitigating urban heat to protect public health</li>
+      </ul>
+  </p>
+  </div>
+</div>
 :::
+
+## Principal Investigator
+
+::: {#pi-section}
+<div class="group-member">
+  <p>**Dr. Liyin He**<br>Assistant Professor of Terrestrial Ecology<br>A207 Levine Science Research Center<br>Nicholas School of the Environment<br>Duke University<br>Durham, NC 27708</p>
+</div>
+:::
+
+<!-- PhD Students section removed as per request -->
+
+<!-- Visiting Students/Scholars section removed as per request -->
+
+<style>
+/* You can place this CSS directly in the .qmd file or in a separate styles.css */
+.group-header {
+  display: flex; /* Use flexbox for horizontal alignment */
+  align-items: flex-start; /* Align items to the top */
+  justify-content: space-between; /* Puts space between logo and description */
+  margin-bottom: 40px;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+  text-align: left; /* Ensure text within header is left-aligned by default */
+  gap: 20px; /* Space between logo and description */
+}
+
+.logo-and-tagline {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align logo and tagline to the left */
+  flex-shrink: 0;
+  margin-right: 20px; /* Space between this block and the description box */
+}
+
+.group-logo {
+  max-width: 300px;
+  height: auto;
+  flex-shrink: 0; /* Prevent logo from shrinking */
+  /* margin-bottom: 15px; Removed as flex handles spacing */
+}
+
+.tagline {
+  font-size: 0.9em; /* Smaller font for the tagline */
+  color: #666;
+  margin: 0;
+  line-height: 1.4;
+  text-align: left;
+}
+
+.group-description-box {
+  flex-grow: 1; /* Allow description to take up remaining space */
+  max-width: 800px; /* Limit width for readability */
+}
+
+.group-description-box p {
+  font-size: 1.1em;
+  color: #444;
+  line-height: 1.6;
+  margin: 0; /* Remove default paragraph margin */
+  text-align: justify; /* Ensures text is justified (aligned to both left and right) */
+}
+
+.group-description-box ul {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-left: 20px; /* Indent bullet points */
+}
+
+.group-description-box li {
+  margin-bottom: 5px;
+}
+
+
+.group-member {
+  display: flex;
+  align-items: flex-start; /* Aligns items to the top of the flex container */
+  margin-bottom: 20px;
+}
+
+.profile-image-container {
+  width: 150px; /* Fixed width for the image slot */
+  height: 150px; /* Fixed height for the image slot */
+  flex-shrink: 0; /* Prevents this container from shrinking */
+  margin-right: 20px; /* Space between the image slot and the text details */
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for consistency */
+}
+
+.profile-pic {
+  display: block; /* Ensures the image behaves as a block element */
+  width: 100%; /* Makes the image fill its container */
+  height: 100%; /* Makes the image fill its container */
+  object-fit: cover; /* Ensures the image covers the area without distortion */
+  border-radius: 0; /* Keeps the image square */
+}
+
+.profile-details {
+  flex-grow: 1; /* Allows the text content to take up the remaining space */
+  padding-left: 20%; /* Indents both h3 and p by 20% of this container's width */
+}
+
+.group-member h3 {
+  margin: 0;
+  padding: 0; /* Ensures no default padding interferes with alignment */
+  color: #333; /* Darker text for names */
+  text-align: left; /* Ensures the name is left-aligned */
+  font-size: 1.2em; /* Made the font size smaller */
+  line-height: 1.3; /* Adjust line height for better spacing with new line */
+}
+
+.group-member h3 a {
+  color: #333; /* Inherit color from h3 or set a specific link color */
+  text-decoration: none; /* Remove underline from the link */
+}
+
+.group-member h3 a:hover {
+  text-decoration: underline; /* Add underline on hover for better UX */
+}
+
+.group-member h3 .year-text {
+  font-size: 0.7em; /* Makes the year text much smaller relative to the name */
+  color: #777; /* Slightly lighter color for the year text */
+  display: block; /* Ensures it takes up its own line within the h3 */
+  margin-top: 2px; /* Small space above the year text */
+}
+
+.group-member p {
+  margin: 0;
+  padding: 0; /* Ensures no default padding interferes with alignment */
+  color: #555; /* Slightly lighter text for descriptions */
+  text-align: left; /* Ensures the description is left-aligned */
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .group-header {
+    flex-direction: column; /* Stack logo and description vertically on small screens */
+    align-items: center; /* Center items when stacked */
+    text-align: center; /* Center text when stacked */
+  }
+  .group-logo {
+    margin-bottom: 15px; /* Add space below logo when stacked */
+  }
+  .group-description-box {
+    max-width: 100%; /* Allow description to use full width on small screens */
+  }
+  .group-description-box p {
+    text-align: center; /* Center text within description box on small screens */
+  }
+
+  .group-member {
+    flex-direction: column; /* Stacks items vertically on smaller screens */
+    align-items: center; /* Centers items horizontally when stacked */
+    text-align: center; /* Centers text for the entire block when stacked */
+  }
+  .profile-image-container {
+    margin-right: 0; /* Removes right margin when stacked */
+    margin-bottom: 10px; /* Adds space below the image/placeholder when stacked */
+  }
+  .profile-details {
+    padding-left: 0; /* Remove padding when stacked to center content */
+  }
+  .group-member h3,
+  .group-member p {
+    text-align: center; /* Centers name and description text when stacked */
+  }
+}
+</style>
