update research interest

--- a/Wenqing_Zhou.qmd
+++ b/Wenqing_Zhou.qmd
@@ -27,7 +27,7 @@ Wenqing is a Ph.D. student in the University Program in Ecology (UPE) at Duke Un
 
 **Wuhan University** \| M.Eng. \|Sep 2022 - Jun 2025\
 -   **Major**: Hydrology and Water Resources \
-**Nanjing University** \| B.Eng.  \|Sep 2018 - Jun 2022\
+**Hohai University** \| B.Eng.  \|Sep 2018 - Jun 2022\
 -   **Major**: Hydrology and Water Resources Engineering (Dayu)\
 
 :::
