--- a/Shiqi_Miao.qmd
+++ b/Shiqi_Miao.qmd
@@ -30,9 +30,9 @@ Shiqi was awarded the <a href="https://gradschool.duke.edu/financial-support/fin
 ## **Education**
 
 **Nanjing University** \| M.S \|Sep 2020 - Jun 2023\
--   Major: Cartography and Geography Information System\
--   National Scholarship (2/129, 2022)\
+-   **Major**: Cartography and Geography Information System\
+-   **National Scholarship** (2/129, 2022)\
 **Nanjing University** \| B.S \|Sep 2016 - Jun 2020\
--   Major: Geographic Information Science (with honor)\
--   National Scholarship (1/70, 2017)
+-   **Major**: Geographic Information Science (with honor)\
+-   **National Scholarship** (1/70, 2017)
 :::
