--- a/index.qmd
+++ b/index.qmd
@@ -37,6 +37,22 @@ format:
 ## Research Highlights
 
 <div style="overflow-x: auto; white-space: nowrap; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch;">
+
+  <div class="card d-inline-block me-3" style="width: 60%; max-width: 530px; scroll-snap-align: start;">
+  <img src="pics/publications/He_NF.jpg" class="card-img-top" alt="Publication 2">
+  <div class="card-body">
+  <h5 class="card-title">Global irrigation expansion under future warming</h5>
+  <p class="card-text">We quantified warming-induced crop yield changes and the irrigation expansion required to offset associated yield losses, accepted in <strong><em>Nature Food</em></strong>.</p>
+  </div>
+  </div>
+  
+  <div class="card d-inline-block me-3" style="width: 60%; max-width: 530px; scroll-snap-align: start;">
+  <img src="pics/publications/Cen_NC.jpg" class="card-img-top" alt="Publication 2">
+  <div class="card-body">
+  <h5 class="card-title">Nitrogen deposition effects on soil respiration</h5>
+  <p class="card-text">This study developed a general framework for nitrogen deposition effects on soil respiration in global forests, published in <a href="https://www.nature.com/articles/s41467-025-67203-8" target="_blank">*Nature Communications*</a>.</p>
+  </div>
+  </div>
   
   <div class="card d-inline-block me-3" style="width: 60%; max-width: 530px; scroll-snap-align: start;">
   <img src="pics/publications/Ren_NatureFood_small.jpg" class="card-img-top" alt="Publication 2">
